Add left navbar

--- a/assets/html/experience.html
+++ b/assets/html/experience.html
@@ -25,6 +25,31 @@
     </header>
 
     <main class="main__experience">
+        <nav>
+            <ul>
+                <li>
+                    <div></div>
+                    <a href="../../index.html">ABOUT</a>
+                </li>
+                <li>
+                    <div></div>
+                    <a href="./lounger.html">LOUNGER</a>
+                </li>
+                <li class="activeExperience">
+                    <div></div>
+                    <a href="./experience.html">EXPERIENCE</a>
+                </li>
+                <li>
+                    <div></div>
+                    <a href="./inspiration.html">INSPIRATION</a>
+                </li>
+                <li>
+                    <div></div>
+                    <a href="./shop.html">SHOP</a>
+                </li>
+            </ul>
+
+        </nav>
         <section class="section1__experience">
 
         </section>
