--- a/assets/html/inspiration.html
+++ b/assets/html/inspiration.html
@@ -23,6 +23,30 @@
         </nav>
     </header>
     <main>
+        <nav>
+            <ul>
+                <li>
+                    <div></div>
+                    <a href="../../index.html">ABOUT</a>
+                </li>
+                <li>
+                    <div></div>
+                    <a href="./lounger.html">LOUNGER</a>
+                </li>
+                <li>
+                    <div></div>
+                    <a href="./experience.html">EXPERIENCE</a>
+                </li>
+                <li class="activeInspiration">
+                    <div></div>
+                    <a href="./inspiration.html">INSPIRATION</a>
+                </li>
+                <li>
+                    <div></div>
+                    <a href="./shop.html">SHOP</a>
+                </li>
+            </ul>
+        </nav>
         <section class="section__video">
             <video autoplay loop preload="auto" muted>
                 <source src="../img/Magical_Home.mp4" type="video/mp4">
