--- a/assets/html/lounger.html
+++ b/assets/html/lounger.html
@@ -24,6 +24,30 @@
 
     </header>
     <main class="main__lounger">
+        <nav>
+            <ul>
+                <li>
+                    <div></div>
+                    <a href="../../index.html">ABOUT</a>
+                </li>
+                <li class="activeLounger">
+                    <div></div>
+                    <a href="./assets/html/lounger.html">LOUNGER</a>
+                </li>
+                <li>
+                    <div></div>
+                    <a href="./experience.html">EXPERIENCE</a>
+                </li>
+                <li>
+                    <div></div>
+                    <a href="./inspiration.html">INSPIRATION</a>
+                </li>
+                <li>
+                    <div></div>
+                    <a href="./shop.html">SHOP</a>
+                </li>
+            </ul>
+        </nav>
         <section class="section1__main__lounger">
 
         </section>
