--- a/assets/html/shop.html
+++ b/assets/html/shop.html
@@ -23,6 +23,30 @@
         </nav>
     </header>
     <main class="main__shop">
+        <nav>
+            <ul>
+                <li>
+                    <div class="div_shop"></div>
+                    <a href="../../index.html">ABOUT</a>
+                </li>
+                <li>
+                    <div class="div_shop"></div>
+                    <a href="./lounger.html">LOUNGER</a>
+                </li>
+                <li>
+                    <div class="div_shop"></div>
+                    <a href="./experience.html">EXPERIENCE</a>
+                </li>
+                <li>
+                    <div class="div_shop"></div>
+                    <a href="./inspiration.html">INSPIRATION</a>
+                </li>
+                <li class="activeShop">
+                    <div class="div_shop"></div>
+                    <a href="./shop.html">SHOP</a>
+                </li>
+            </ul>
+        </nav>
         <section class="section1_shop">
 
         </section>
