--- a/index.html
+++ b/index.html
@@ -24,8 +24,32 @@
         <h1>Go beyond music. Immerse your senses through vibration.</h1>
     </header>
     <main class="main__index">
-        <section class="section1__main">
+        <nav>
+            <ul>
+                <li class="activeAbout">
+                    <div></div>
+                    <a href="./index.html">ABOUT</a>
+                </li>
+                <li>
+                    <div></div>
+                    <a href="./assets/html/lounger.html">LOUNGER</a>
+                </li>
+                <li>
+                    <div></div>
+                    <a href="./assets/html/experience.html">EXPERIENCE</a>
+                </li>
+                <li>
+                    <div></div>
+                    <a href="./assets/html/inspiration.html">INSPIRATION</a>
+                </li>
+                <li>
+                    <div></div>
+                    <a href="./assets/html/shop.html">SHOP</a>
+                </li>
+            </ul>
 
+        </nav>
+        <section class="section1__main">
         </section>
         <section class="section2__main">
             <img src="./assets/img/BS1_NYC_Home.webp" alt="">
